@@ -30,11 +30,15 @@
 # %colorXX[,XX] = gives color to text, replace XX with [01][0-9] from 01 to 16, optional extra color gives background
 # %section = current section name
 #
-# For NUKE/UNNUKE/NUKEES
+# For NUKE/UNNUKE
 #  %nuker   = name of nuker
 #  %multiplier = nuke multiplier
 #  %reason  = nuke reason
-#  %nukee   = ppl that got nuked
+#  %nukees  = ppl that got nuked
+#  %type    = NUKE or UNNUKE
+# For NUKEES
+#  %u_name  = username that got (un)nuked
+#  %size    = amount (un)nuked
 #
 # For BNC_PING/BNC_ONLINE/BNC_OFFLINE
 # Info for first four are taken from bnc(LIST)
@@ -70,6 +74,86 @@
 #  %time    = system uptime
 #  %users   = users logged in on system
 #  %load    = system load
+#
+# For NEW/NUKES/UNNUKES
+#  %section = section for which newdirs are shown
+# For SEARCH
+#  %pattern = what is searched for
+# For NEW_BODY/SEARCH_BODY/NUKES_BODY/UNNUKES_BODY
+#  %num     = num in list
+#  %date    = date of creation/nuke/unnuke
+#  %time    = time of creation/nuke/unnuke
+#  %mbytes  = size of the dir contents in MiB
+# For NEW_BODY/SEARCH_BODY
+#  %age     = how long ago it was created
+#  %u_name  = username that created the dir
+#  %g_name  = groupname of the user
+#  %files   = amount of files in the dir
+# For NUKES_BODY/UNNUKES_BODY
+#  %nuker      = for NUKES, name of nuker
+#  %unnuker    = for UNNUKES, name of unnuker
+#  %nukee      = name(s) of (un)nuked user(s)
+#  %multiplier = (un)nuke factor
+#  %reason     = reason of (un)nuke
+#
+# For BW/BWUP/BWDN
+# Gives info about the status right now
+#  %uploads      = amount of uploads
+#  %upspeed      = total uploadspeed
+#  %downloads    = amount of downloads
+#  %dnspeed      = total downloadspeed
+#  %transfers    = amount of up and downloads
+#  %totalspeed   = total speed
+#  %idlers       = idle users
+#  %active       = active users
+#  %totallogins  = total logged in users
+#  %maxusers     = max allowed users
+#  %uppercent    = percent of bw used up, calculated via speed(INCOMING)
+#  %dnpercent    = percent of bw used dn, calculated via speed(OUTGOING)
+#  %totalpercent = total percent of bw used
+#
+# For USERIDLE
+#  %u_name   = username
+#  %g_name   = groupname
+#  %idletime = time being idle
+#  %tagline  = tagline
+#  %since    = time online
+# For TOTIDLE
+#  %count    = total idlers
+#
+# For SPEEDDN/SPEEDUP/SPEEDID
+#  %u_name     = username
+#  %g_name     = groupname
+#  %tagline    = tagline
+#  %timeonline = time online
+#  %f_name     = filename being transfered
+#  %u_pid      = PID of user
+#  %dnspeed    = for SPEEDDN only, downloadspeed of user
+#  %dnpercent  = for SPEEDDN only, percent of bw used
+#  %upspeed    = for SPEEDUP only, uploadspeed of user
+#  %uppercent  = for SPEEDUP only, percent of bw used
+#  %idletime   = for SPEEDID only, time idling
+#
+# For USER
+#  %u_name   = username
+#  %g_name   = groupname
+#  %fper     = percentage of file transferred
+#  %speed    = speed up/dn of user
+#  %per      = percentage of bw used up/dn
+#  %tagline  = tagline
+#  %since    = time online
+#  %filename = file being transferred
+# For TOTUPDN
+#  %type     = Uploaders: or Leechers:
+#  %count    = amount of transfers up/dn
+#  %total    = total speed up/dn
+#  %per      = total percentage up/dn
+#
+# For BADMSGINVITE/MSGINVITE
+#  %u_ircnick = username on irc
+#  %u_name    = username
+#  %u_host    = user's host
+#  %g_name    = groupname
 #
 # PLEASE! DO NOT CHANGE THESE VALUES IF YOU DO NOT KNOW WHAT THEY DO! IT *WILL* BREAK THE BOT!
 
