@@ -2,7 +2,8 @@ PZS-NG CHANGELOG
 ----------------
 
 v1.2.0  --> 1.2.x :
-		- Add explanation for vars in WELCOME and UPTIME
+		- Fix disabling of BADMSGINVITE announce.
+		- Add explanation for vars in all triggers, WELCOME and (BAD)MSGINVITE
 		- Add %color explanation and extra info for BNC_* announces
 		- Add explanation for usable vars in FREE and FREE-DEV
 		- Add announce for users with email as pass and using an incorrect one.
